CDPD-95569: HIVE-21228: Replace all occurences of new Integer with Integer.valueOf (Ivan Suller via Zoltan Haindrich)
(cherry picked from commit 55c00a77ebf9d8b9ef3bc386f9314e4d8635463e)